# soccer-meet

./: Cargo.toml  Makefile  curl_requests.txt
src/: main.rs
src/routes/: config.rs  game.rs  mod.rs
